--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,5 +1,5 @@
 #wrapper {
-	width: 40%;
+	width: 30%;
 	margin: 0 auto;
 	margin-top: 50px;
 }
@@ -8,7 +8,7 @@
 	padding: 10px;
 }
 
-#table-login {
+#table-add-user {
 	width: 100%;
 }
 
@@ -17,17 +17,17 @@
 	padding: .4em .8em;
 }
 
-#username, #password {
+#fname, #lname, #username, #password {
 	width: 99%;
 	font-size: 1.4em;
 }
 
 /* for jquery validation */
-#username-error, #password-error {
+#fname-error, #lname-error, #username-error, #password-error {
 	color: red;
 }
 
-/*@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
 	#wrapper {
 		width: 30%;
 	}
@@ -41,12 +41,12 @@
 
 @media screen and (max-width: 991px) and (min-width: 768px) {
 	#wrapper {
-		width: 30%;
+		width: 45%;
 	}
-}*/
+}
 
 @media screen and (max-width: 767px) {
 	#wrapper {
-		width: 80%;
+		width: 55%;
 	}
 }
